--- a/client/package.json
+++ b/client/package.json
@@ -1,25 +1,23 @@
 {
-  "name": "react-social",
+  "name": "case-study",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@google/model-viewer": "^1.7.2",
-    "@material-ui/core": "^4.11.3",
+    "@google/model-viewer": "^1.8.0",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
     "axios": "^0.21.1",
     "font-awesome": "^4.7.0",
-    "materialize-css": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-web-ar": "^1.0.0-beta0",
-    "three": "^0.87.1",
+    "react-scripts": "^4.0.3",
     "timeago.js": "^4.0.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
